crates/crochet_parser/src/snapshots/crochet_parser__tests__type_decls-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"type Foo<T = \"foo\"> = {bar: T};\"#)"
---
Ok(
    Program {
        body: [
            TypeDecl {
                span: 0..31,
                declare: false,
                id: Ident {
                    span: 5..8,
                    name: "Foo",
                },
                type_ann: Object(
                    ObjectType {
                        span: 22..30,
                        elems: [
                            Prop(
                                TProp {
                                    span: 23..29,
                                    name: "bar",
                                    optional: false,
                                    mutable: false,
                                    type_ann: TypeRef(
                                        TypeRef {
                                            span: 28..29,
                                            name: "T",
                                            type_params: None,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ),
                type_params: Some(
                    [
                        TypeParam {
                            span: 9..18,
                            name: Ident {
                                span: 9..10,
                                name: "T",
                            },
                            constraint: None,
                            default: Some(
                                Lit(
                                    Str(
                                        Str {
                                            span: 13..18,
                                            value: "foo",
                                        },
                                    ),
                                ),
                            ),
                        },
                    ],
                ),
            },
        ],
    },
)
