crates/crochet_parser/src/snapshots/crochet_parser__tests__types-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let thunk_arr: (() => undefined)[] = []\")"
---
Program {
    body: [
        VarDecl {
            span: 0..39,
            pattern: Ident(
                BindingIdent {
                    span: 4..13,
                    id: Ident {
                        span: 4..13,
                        name: "thunk_arr",
                    },
                },
            ),
            type_ann: Some(
                Array(
                    ArrayType {
                        span: 0..0,
                        elem_type: Lam(
                            LamType {
                                span: 16..31,
                                params: [],
                                ret: Keyword(
                                    KeywordType {
                                        span: 22..31,
                                        keyword: Undefined,
                                    },
                                ),
                                type_params: None,
                            },
                        ),
                    },
                ),
            ),
            init: Some(
                Tuple(
                    Tuple {
                        span: 37..39,
                        elems: [],
                    },
                ),
            ),
            declare: false,
        },
    ],
}
