crates/crochet_parser/src/snapshots/crochet_parser__tests__types-7.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let nested_arr: string[][] = [];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..32,
                pattern: Ident(
                    BindingIdent {
                        span: 4..14,
                        id: Ident {
                            span: 4..14,
                            name: "nested_arr",
                        },
                    },
                ),
                type_ann: Some(
                    Array(
                        ArrayType {
                            span: 16..26,
                            elem_type: Array(
                                ArrayType {
                                    span: 16..24,
                                    elem_type: Prim(
                                        PrimType {
                                            span: 16..22,
                                            prim: Str,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ),
                init: Some(
                    Expr {
                        span: 29..31,
                        kind: Tuple(
                            Tuple {
                                elems: [],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
