crates/crochet_parser/src/snapshots/crochet_parser__tests__types-8.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(src)
---
Ok(
    Program {
        body: [
            TypeDecl {
                span: 9..120,
                declare: false,
                id: Ident {
                    span: 14..19,
                    name: "Event",
                },
                type_ann: Union(
                    UnionType {
                        span: 33..119,
                        types: [
                            Union(
                                UnionType {
                                    span: 33..76,
                                    types: [
                                        Object(
                                            ObjectType {
                                                span: 35..76,
                                                elems: [
                                                    Prop(
                                                        TProp {
                                                            span: 36..53,
                                                            name: "type",
                                                            optional: false,
                                                            mutable: false,
                                                            type_ann: Lit(
                                                                Str(
                                                                    Str {
                                                                        span: 42..53,
                                                                        value: "mousedown",
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                    Prop(
                                                        TProp {
                                                            span: 55..64,
                                                            name: "x",
                                                            optional: false,
                                                            mutable: false,
                                                            type_ann: Prim(
                                                                PrimType {
                                                                    span: 58..64,
                                                                    prim: Num,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    Prop(
                                                        TProp {
                                                            span: 66..75,
                                                            name: "y",
                                                            optional: false,
                                                            mutable: false,
                                                            type_ann: Prim(
                                                                PrimType {
                                                                    span: 69..75,
                                                                    prim: Num,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    ],
                                },
                            ),
                            Object(
                                ObjectType {
                                    span: 89..119,
                                    elems: [
                                        Prop(
                                            TProp {
                                                span: 90..105,
                                                name: "type",
                                                optional: false,
                                                mutable: false,
                                                type_ann: Lit(
                                                    Str(
                                                        Str {
                                                            span: 96..105,
                                                            value: "keydown",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        Prop(
                                            TProp {
                                                span: 107..118,
                                                name: "key",
                                                optional: false,
                                                mutable: false,
                                                type_ann: Prim(
                                                    PrimType {
                                                        span: 112..118,
                                                        prim: Str,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                    },
                ),
                type_params: None,
            },
        ],
    },
)
